--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.3</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>lotteryAgent</finalName>
